<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">
    
    <RelativeLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="@dimen/main_navigation_layout_height" 
    	android:background="@color/main_navigation_background">
        
	    <include layout="@layout/navigation_cover" />
	    
        <include layout="@layout/navigation_return" />
        
        <include layout="@layout/navigation_title" />
        
        <include layout="@layout/navigation_contacts" />
        
    </RelativeLayout>
     
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none"
		android:overScrollMode="never" 
		android:background="@drawable/main_background_repeat">
        
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="@dimen/expert_confirm_introduction_marginTop"
	        android:paddingBottom="@dimen/expert_confirm_introduction_marginTop"
	        android:paddingLeft="@dimen/expert_filter_layout_padding"
	        android:paddingRight="@dimen/expert_filter_layout_padding">
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_header_normal" >
	            
	            <TextView
					style="@style/user_feedback_detail_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:text="@string/public_name_input" />
	            
	            <EditText android:id="@+id/textFeedbackDetailName"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="text"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_name_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/user_feedback_detail_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:text="@string/public_idcard_input" />
	            
	            <EditText android:id="@+id/textFeedbackDetailIDCard"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="text"
				    android:maxLength="18"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_idcard_hint"/>
	            
	        </LinearLayout>
	        
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/feedback_layout_height"
	        	android:orientation="vertical"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/user_feedback_detail_title" 
					android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/feedback_detail_title_marginTop"
				    android:layout_marginBottom="@dimen/feedback_detail_title_marginBottom"
					android:text="@string/user_feedback_detail_opinion" />
	            
	            <EditText android:id="@+id/textFeedbackDetailOpinion"
					style="@style/report_detial_message" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="textMultiLine"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/user_feedback_detail_opinion_hint"/>
	            
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/feedback_layout_height"
	        	android:orientation="vertical"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/user_feedback_detail_title" 
					android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/feedback_detail_title_marginTop"
				    android:layout_marginBottom="@dimen/feedback_detail_title_marginBottom"
					android:text="@string/user_feedback_detail_suggestion" />
	            
	            <EditText android:id="@+id/textFeedbackDetailSuggestion"
					style="@style/report_detial_message" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="textMultiLine"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/user_feedback_detail_suggestion_hint"/>
	            
	        </LinearLayout>
	        
    		<LinearLayout
    		    android:id="@+id/layoutFeedbackAdd"
	    		android:layout_width="fill_parent" 
	    		android:layout_height="@dimen/expert_confirm_button_layout_height"
            	android:layout_marginTop="@dimen/expert_filter_layout_padding"
    			android:background="@drawable/expert_confirm_button_background"
   				android:orientation="horizontal">
		        <Button android:id="@+id/buttonFeedbackDetailAdd"
			        android:layout_width="fill_parent" 
			    	android:layout_height="@dimen/public_button_height"
			    	android:background="@drawable/public_button_dark_background_selector"
			    	style="@style/public_button_dark"
			    	android:text="@string/public_add" />
	        </LinearLayout>
    		<LinearLayout
    		    android:id="@+id/layoutFeedbackEdit"
	    		android:layout_width="fill_parent" 
	    		android:layout_height="@dimen/expert_confirm_button_layout_height"
            	android:layout_marginTop="@dimen/expert_filter_layout_padding"
    			android:background="@drawable/expert_confirm_button_background"
   				android:orientation="horizontal">
		        
	        	<Button android:id="@+id/buttonFeedbackDetailDelete"
			        android:layout_width="fill_parent" 
			    	android:layout_height="@dimen/public_button_height"
			    	android:background="@drawable/public_button_dark_background_selector"
			    	style="@style/public_button_dark"
			    	android:text="@string/public_add"
			    	android:layout_weight="1" />
	        
		         <View
		            android:layout_width="@dimen/contacts_layout_padding" 
			    	android:layout_height="fill_parent" />
		         
		        <Button android:id="@+id/buttonFeedbackDetailSubmit"
			        android:layout_width="fill_parent" 
			    	android:layout_height="@dimen/public_button_height"
			    	android:background="@drawable/public_button_dark_background_selector"
			    	style="@style/public_button_dark"
			    	android:text="@string/public_submit"
			    	android:layout_weight="1" />
	        
	        
    		</LinearLayout>
	    </LinearLayout>
    
	</ScrollView>
	    
</LinearLayout>