<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">
    
    <RelativeLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="@dimen/main_navigation_layout_height" 
    	android:background="@color/main_navigation_background">
        
	    <include layout="@layout/navigation_cover" />
	    
        <include layout="@layout/navigation_return" />
        
        <include layout="@layout/navigation_title" />
        
    </RelativeLayout>
     
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none"
		android:overScrollMode="never" 
		android:background="@drawable/main_background_repeat">
        
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="@dimen/expert_confirm_introduction_marginTop"
	        android:paddingBottom="@dimen/expert_confirm_introduction_marginTop"
	        android:paddingLeft="@dimen/expert_filter_layout_padding"
	        android:paddingRight="@dimen/expert_filter_layout_padding">
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_header_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/user_register_account" />
	            
	            <EditText android:id="@+id/textUserRegisterAccount"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="text"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/user_register_account_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/public_name_input" />
	            
	            <EditText android:id="@+id/textUserRegisterName"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="text"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_name_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/user_register_password" />
	            
	            <EditText android:id="@+id/textUserRegisterPassword"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="textPassword"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/user_register_password_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/user_register_confirm" />
	            
	            <EditText android:id="@+id/textUserRegisterConfirm"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="textPassword"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/user_register_confirm_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/public_telephone_input" />
	            
	            <EditText android:id="@+id/textUserRegisterTelephone"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="number"
				    android:maxLength="11"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_telephone_hint"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/public_email" />
	            
	            <EditText android:id="@+id/textUserRegisterEmail"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="textEmailAddress"
		            android:imeOptions="actionNext"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_email_hint" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/public_idcard_input" />
	            
	            <EditText android:id="@+id/textUserRegisterIDCard"
					style="@style/user_login_input_text" 
					android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_marginRight="@dimen/expert_filter_title_marginLeft"
				    android:background="@null"
				    android:inputType="text"
				    android:maxLength="18"
		            android:imeOptions="actionDone"
		            android:cursorVisible="true"
		            android:textCursorDrawable="@drawable/public_input_cursor"
		            android:hint="@string/public_idcard_hint"/>
	            
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="@dimen/expert_filter_layout_height"
	        	android:orientation="horizontal"
	        	android:background="@drawable/expert_filter_button_background_other_normal" >
	            <TextView
					style="@style/list_item_department_title" 
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"
					android:text="@string/user_register_agreement" />
	            <CheckBox 
	                android:id="@+id/checkUserRegisterAgreement"
					android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
					android:layout_marginLeft="@dimen/expert_filter_title_marginLeft"/>
	        </LinearLayout>
	        
	        <Button android:id="@+id/buttonUserRegisterSubmit"
		        android:layout_width="fill_parent" 
		    	android:layout_height="@dimen/public_button_height"
            	android:layout_marginTop="@dimen/expert_filter_layout_padding"
		    	android:background="@drawable/public_button_dark_background_selector"
		    	style="@style/public_button_dark"
		    	android:text="@string/user_register_submit" />
	        
	    </LinearLayout>
    
	</ScrollView>
	    
</LinearLayout>